--- a/find_keywords_from_sentence.ipynb
+++ b/find_keywords_from_sentence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #file_path='/home/mehroz/pdf_filed_2/Untitled Folder/Aluminum paper/1-s2.0-S135964541630828X-main.pdf'\n",
-    "# path='/home/mehroz/pdf_filed_2/Untitled Folder/Aluminum paper/'\n",
     "\n",
     "def preprocess(path):\n",
     "    \n",
@@ -69,27 +67,11 @@
     "                \n",
     "                \n",
     "    nlp = spacy.load(\"en\")\n",
-    "    regex_str=r\"corrosion|DoS|(IGC)|intergranular stress corrosion cracking (IGSCC)|yield strength|corrosion rate|hardness|pit initiation rate|pit growth kinetics|electrochemical potentials|potentiodynamic polarisation|stabilisation at open circuit potential (OCP)|(OCP)|(E corr )|(Ecorr)|corrosion density|(i corr )|hardness|recrystallised|intergranular corrosion rate|electrochemical properties|anodic kinetic|corrosion kinetics|gal-vanic corrosion|galvanic corrosion|mechanical properties|degree of sensitisation|relative corrosion potential|sensitisation resistance|tentiodynamic polarisation|intergranular corrosion rate\"\n",
-    "\n",
     "    sentencizer = nlp.create_pipe(\"sentencizer\")\n",
     "    nlp.add_pipe(sentencizer)\n",
     "    pdf_files=listdir(path)\n",
     "    compositions_list=[]\n",
-    "    \n",
-    "    \n",
-    "            \n",
-    "#     for indx in range(0,len(partial_list)):\n",
-    "#         remaining_sent=partial_list[indx]\n",
-    "#         x1 = re.finditer(partial_regex,remaining_sent)\n",
-    "#         if x1:\n",
-    "            \n",
-    "#             for match_data in x1:\n",
-    "#                 result=match_data.span()\n",
-    "#                 print('\\n remaining matched->',remaining_sent[result[0]:result[1]])\n",
-    "#                 #print('\\n',sentence[result[0]:result[1]],'<-sentence-> ',sentence)\n",
-    "#                 r1=(remaining_sent.decode(\"utf-8\"),{\"entities\":[(remaining_sent[0],remaining_sent[1],\"Composition\")]})\n",
-    "#                 #print('\\n r type :',type(r))\n",
-    "#                 compositions_list.append(r1)\n",
+    "\n",
     "                \n",
     "    for pdf_file_index in range(0,len(pdf_files)):\n",
     "        pdf_file_path=path+pdf_files[pdf_file_index]\n",
@@ -99,229 +81,22 @@
     "        doc = nlp(text_file)\n",
     "        \n",
     "        for sent in doc.sents:\n",
-    "            #print('\\n ----- ',sent)\n",
-    "            #print('\\n --- ',str(sent))\n",
-    "            #print('\\n type :',type(sent))\n",
-    "            if re.search('fracture strain',str(sent)):\n",
+    "            if re.search('Keyword',str(sent)):\n",
     "                print('\\n start sent:')\n",
     "                print(sent)\n",
     "                print('\\n end sent')\n",
-    "    return                     \n",
-    "        #get_compositions(text_file)\n"
+    "    return                     \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509314009319-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1044580317336136-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1003632617601900-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509314014749-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0925838817304140-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S026130691100553X-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509313001275-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0925838817330463-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0749641917306381-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/Roles of Microalloying Elements on the Cluster Formation in the Initial Stage of Phase Decomposition of Al-Based Alloys.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1359645413009294-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509309004043-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/Orrhede1996_Article_ElasticConstantsAndThermalExpa.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1359646214002772-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0925838816319879-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1003632617600335-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509316302313-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S2095034915300088-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509315000738-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509309011368-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0010938X18319164-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1044580318304510-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1359645414003425-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509316300855-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1359645414001803-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509316303641-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1003632618646746-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1003632617600906-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0261306911002809-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0924013615300029-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1359645414007770-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509312002390-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/Sato1999_Article_MicrostructuralEvolutionOf6063.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509315305190-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1359646214000074-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/Forging of Discontinuously Reinforced Composites.pdf\n",
-      "\n",
-      " start sent:\n",
-      "\n",
-      "\n",
-      "fracture\n",
-      "\n",
-      "The Cockcroft-and-Latham fracture criterion\n",
-      "proposes that ductile fracture occurs when the\n",
-      "amount of deformation work due to the max-\n",
-      "imum tensile stress reaches a critical value C*.\n",
-      "The criterion is given in Eq 1, where s2B is the\n",
-      "maximum tensile stress in region B, seff and eeff\n",
-      "are the effective stress and strain respectively, s\n",
-      "is the equivalent stress, e is strain, and ef is the\n",
-      "fracture strain in uniaxial tension.\n",
-      "\n",
-      " end sent\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/Alloying Elements Example- Preaged Al.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1359645415006837-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509313008769-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1359645416301239-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S2214785315003776-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/colors.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1359645416308412-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S135964541630828X-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0749641918302912-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S092150931630082X-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/Enhancement of strength and superplasticity in a 6061_MetTransA.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0925838815304242-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1359645417300599-main.pdf\n",
-      "\n",
-      " start sent:\n",
-      "Local stirring using a\n",
-      "friction stir processing (FSP) tool is shown here to very signiﬁcantly increase the fracture strain of the Al\n",
-      "alloy 6056 sometimes by more than a factor of two while making it more isotropic.\n",
-      "\n",
-      " end sent\n",
-      "\n",
-      " start sent:\n",
-      "Factors like\n",
-      "particle clustering, particle morphology and size have a ﬁrst order\n",
-      "impact on the fracture strain [6,9].\n",
-      "\n",
-      " end sent\n",
-      "\n",
-      " start sent:\n",
-      "The key element controlling the\n",
-      "magnitude of the fracture strain in these alloys was the effect of\n",
-      "particle size distribution and spatial distribution on the void\n",
-      "nucleation and coalescence process.\n",
-      "\n",
-      " end sent\n",
-      "\n",
-      " start sent:\n",
-      "The presence of pre-existing\n",
-      "voids has also been shown to have a ﬁrst order effect on the\n",
-      "fracture strain.\n",
-      "\n",
-      " end sent\n",
-      "\n",
-      " start sent:\n",
-      "The\n",
-      "true fracture strain deﬁned as εf ¼ ln (A0/Af) is determined from\n",
-      "broken specimens, with A0 and Af being respectively the initial and\n",
-      "ﬁnal cross-section area.\n",
-      "\n",
-      " end sent\n",
-      "\n",
-      " start sent:\n",
-      "13(a) shows, for the BM and for the FSPed material, the\n",
-      "variation of the fracture strains ( 3 f) as a function of s0 corre-\n",
-      "sponding to the various heat treatments.\n",
-      "\n",
-      " end sent\n",
-      "\n",
-      " start sent:\n",
-      "Variation of the (a) true fracture strains and (b) engineering fracture strain\n",
-      "extracted from the uniaxial tensile tests as a function of the yield stress corresponding\n",
-      "to the different heat treatments.\n",
-      "\n",
-      " end sent\n",
-      "\n",
-      " start sent:\n",
-      "\n",
-      "\n",
-      "Tensile testing and interrupted tensile tests of BM and FSPed\n",
-      "\n",
-      "samples have provided the following key results:\n",
-      "\u000f The fracture strain of FSP samples is improved by almost 100% in\n",
-      "the best cases compared to the BM tensile samples at identical\n",
-      "yield strength.\n",
-      "\n",
-      " end sent\n",
-      "\n",
-      " start sent:\n",
-      "The\n",
-      "vertical lines indicate the experimental fracture strain ( 3 f).\n",
-      "\n",
-      " end sent\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1044580314000321-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1044580316308403-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0921509307017790-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S1044580317336781-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0925838818303074-main.pdf\n",
-      "\n",
-      " Address : /home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/1-s2.0-S0264127516313090-main.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path='/home/mehroz/pdf_filed_2/Untitled_Folder/Aluminum paper/'\n",
     "\n",
-    "compositions=preprocess(path)"
+    "#compositions=preprocess(path)"
    ]
   },
   {
